--- a/spring-cloud-server/src/main/resources/application.properties
+++ b/spring-cloud-server/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.cloud.config.uri=
+server.port=10000
+spring.cloud.config.server.git.uri=https://github.com/wangyanbing/spring-cloud.git
+spring.cloud.config.server.git.search-paths=spring-cloud-config
