复制cloud项目重新命名为spring-cloud-service,远程调用spring-cloud-server配置信息

--- a/spring-cloud-server/src/main/resources/application.properties
+++ b/spring-cloud-server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=10000
 spring.cloud.config.server.git.uri=https://github.com/wangyanbing/spring-cloud.git
 spring.cloud.config.server.git.search-paths=spring-cloud-config
+spring.cloud.config.server.git.timeout=60000
+spring.application.name=spring-cloud-server
