整体提交zuul路由功能及服务提供者信息

--- a/spring-cloud-service/src/main/resources/bootstrap.properties
+++ b/spring-cloud-service/src/main/resources/bootstrap.properties
@@ -1,4 +1,12 @@
+# 远程获取数据库配置信息
 spring.cloud.config.uri=http://127.0.0.1:10000
 spring.cloud.config.name=spring-cloud
 spring.cloud.config.profile=${config.profile:dev}
+
+# 服务名称和对外暴露的接口的端口号
+spring.application.name=spring-cloud-service
+# 8763
+server.port=8763
+
+# 日志
 logging.config=classpath:logback.xml
