提交:关键字 bus:消息总线,consul:注册中心 feign远程调用负载均衡,zipkin,sleuth:链路追踪 stream:消息服务

--- a/spring-cloud-eureka/src/main/resources/application.properties
+++ b/spring-cloud-eureka/src/main/resources/application.properties
@@ -1,9 +1,19 @@
-server.port=8761
+server.port=8882
+spring.application.name=spring-cloud-eureka
+
+server.register.port1=8881
+server.register.port2=8882
+server.register.port3=8883
+
 eureka.instance.hostname=localhost
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+#是否将本身注册到注册中心,单机不用,集群需设置为true
+eureka.client.register-with-eureka=true
+# 是否检索服务,单机不用,集群需要检索其他注册中心
+eureka.client.fetch-registry=true
 # eureka注册服务查看页面登陆校验
 # security.basic.enabled=true
 # security.user.name=fanyin
 # security.user.password=3306
-
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.register.port1}/eureka/,http://${eureka.instance.hostname}:${server.register.port2}/eureka/,http://${eureka.instance.hostname}:${server.register.port3}/eureka/
+# 控制台彩色输出
+spring.output.ansi.enabled=always
